samples/_failures_safe/1761083326_767ddd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17e8e33f.c: In function ‘main’:
./samples/SAFE/__tmp_17e8e33f.c:166:5: error: expected expression at end of input
  166 |     for (int i = 0; i < token_count; i++)
      |     ^~~
./samples/SAFE/__tmp_17e8e33f.c:166:5: error: expected declaration or statement at end of input
